--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Multifacile is a little project in C++ based on Qt framework which want to help the children to learn their multiplication tables.
 
-For this moment Multifacile don't work on Linux.
+Now, Multifacile work on Windows XP/Vista/7 32bits/64bits and on Linux (Debian/Ubuntu) 32bits !
 
 Thank you for your interest.
