mise à jour du readme

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Multifacile is a little project in C++ based on Qt framework which want to help the children to learn their multiplication tables.
+Multifacile is a little project under GPL licence in C++ based on Qt framework which want to help the children to learn their multiplication tables.
 
 Now, Multifacile work on Windows XP/Vista/7 32bits/64bits and on Linux (Debian/Ubuntu) 32bits !
 
